# round_robin

./: .env.example  .gitignore  docker-compose.yml  readme.md
instance-demo/: Dockerfile  pyproject.toml
instance-demo/app/: main.py
round-robin/: pyproject.toml
round-robin/app/: main.py  settings.py
round-robin/app/queue/: instance.py  instance_queue.py
round-robin/instance/: Dockerfile  README.md
round-robin/instance/tests/: test_api.py
round-robin/robin/: Dockerfile  README.md  test.ini
round-robin/robin/app/: main.py  settings.py
round-robin/robin/app/queue/: __init__.py  instance.py  instance_queue.py
round-robin/robin/tests/: conftest.py  test_round_robin.py
round-robin/tests/: conftest.py  test_round_robin.py
